--- a/Polish_presidential_election_2030_turnout_prediction_model_plus_visualization/Notebooks/03_main_model_training_and_prediction.ipynb
+++ b/Polish_presidential_election_2030_turnout_prediction_model_plus_visualization/Notebooks/03_main_model_training_and_prediction.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "id": "eabd393b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "08af2ba9",
    "metadata": {},
    "outputs": [
@@ -172,7 +163,7 @@
        "4                             55.0  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "id": "0104f856",
    "metadata": {},
    "outputs": [],
@@ -229,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "b383244f",
    "metadata": {},
    "outputs": [
@@ -238,7 +229,13 @@
      "output_type": "stream",
      "text": [
       "Looking for best parameters.\n",
-      "Fitting 3 folds for each of 54 candidates, totalling 162 fits\n",
+      "Fitting 3 folds for each of 54 candidates, totalling 162 fits\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Best parameters: {'learning_rate': 0.05, 'max_depth': 5, 'n_estimators': 100, 'subsample': 0.8}\n",
       "------------------------------------------------------------\n",
       "Scores for 2025 (XGBoost):\n",
@@ -311,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "id": "6147b48e",
    "metadata": {},
    "outputs": [
@@ -395,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "id": "7caf3f1c",
    "metadata": {},
    "outputs": [
@@ -484,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "id": "0ea531ea",
    "metadata": {},
    "outputs": [
@@ -726,7 +723,7 @@
        "[760 rows x 10 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "id": "295f9f23",
    "metadata": {},
    "outputs": [
@@ -867,7 +864,7 @@
        "64        jaworski      2  2030           66.676231"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "id": "d332f1dc",
    "metadata": {},
    "outputs": [
@@ -996,7 +993,7 @@
        "37      0203       głogowski      1               71.22  2030"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "id": "74cc6368",
    "metadata": {},
    "outputs": [],
