--- a/Polish_presidential_election_2030_turnout_prediction_model_plus_visualization/Notebooks/03_main_model_training_and_prediction.ipynb
+++ b/Polish_presidential_election_2030_turnout_prediction_model_plus_visualization/Notebooks/03_main_model_training_and_prediction.ipynb
@@ -7,9 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from xgboost import XGBRegressor\n",
@@ -19,7 +16,7 @@
     "import warnings\n",
     "\n",
     "# Methods:\n",
-    "import model_training_and_prediction_methods as mtapm\n",
+    "from src import model_training_and_prediction_methods as mtapm\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -169,7 +166,7 @@
     }
    ],
    "source": [
-    "model_set_df = pd.read_parquet(\"../Data/Proccesed_data/model_set.parquet\")\n",
+    "model_set_df = pd.read_parquet(\"../data/proccesed_data/model_set.parquet\")\n",
     "model_set_df.head()\n"
    ]
   },
@@ -229,18 +226,12 @@
      "output_type": "stream",
      "text": [
       "Looking for best parameters.\n",
-      "Fitting 3 folds for each of 54 candidates, totalling 162 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 54 candidates, totalling 162 fits\n",
       "Best parameters: {'learning_rate': 0.05, 'max_depth': 5, 'n_estimators': 100, 'subsample': 0.8}\n",
       "------------------------------------------------------------\n",
       "Scores for 2025 (XGBoost):\n",
-      "MAE: 5.2666\n",
-      "RMSE: 6.2819\n",
+      "MAE: 5.1619\n",
+      "RMSE: 6.1663\n",
       "------------------------------------------------------------\n"
      ]
     }
@@ -321,8 +312,8 @@
       "Best parameters: {'max_depth': 10, 'min_samples_leaf': 4, 'min_samples_split': 2, 'n_estimators': 300}\n",
       "------------------------------------------------------------\n",
       "Scores for 2025 (Random Forest):\n",
-      "MAE: 6.0560\n",
-      "RMSE: 7.1460\n",
+      "MAE: 6.0483\n",
+      "RMSE: 7.1388\n",
       "------------------------------------------------------------\n"
      ]
     }
@@ -402,11 +393,11 @@
      "text": [
       "Looking for best parameters: \n",
       "Fitting 3 folds for each of 81 candidates, totalling 243 fits\n",
-      "Best parameters: {'l2_regularization': 1.0, 'learning_rate': 0.05, 'max_depth': 5, 'max_iter': 200}\n",
+      "Best parameters: {'l2_regularization': 0, 'learning_rate': 0.1, 'max_depth': 5, 'max_iter': 100}\n",
       "------------------------------------------------------------\n",
       "Scores for 2025 (Hist Gradient Boost)\n",
-      "MAE: 5.7723\n",
-      "RMSE: 6.8004\n",
+      "MAE: 5.7454\n",
+      "RMSE: 6.7706\n",
       "------------------------------------------------------------\n"
      ]
     }
@@ -474,7 +465,7 @@
    "source": [
     "### Due to the best accuracy of the XGBoost model, after evaluating all models used for prediction, it was decided to use this model to make predictions for 2030. \n",
     "\n",
-    "### Taking into account that the model does not see polls, emotions or candidates' names, but only \"dry\" economic data (salaries, age, GDP), the result with the MAE error slightly above 5.2 is very good. The model correctly captures the region's mobilization potential.\n",
+    "### Taking into account that the model does not see polls, emotions or candidates' names, but only \"dry\" economic data (salaries, age, GDP), the result with the MAE error slightly above 5.16 is very good. The model correctly captures the region's mobilization potential.\n",
     "\n",
     "### For this purpose, data from the previously prepared model_set_2030 set was used"
    ]
@@ -745,7 +736,7 @@
      "text": [
       "Looking for best parameters...\n",
       "Fitting 3 folds for each of 54 candidates, totalling 162 fits\n",
-      "Best parameters: {'learning_rate': 0.05, 'max_depth': 3, 'n_estimators': 200, 'subsample': 1.0}\n"
+      "Best parameters: {'learning_rate': 0.05, 'max_depth': 3, 'n_estimators': 200, 'subsample': 0.8}\n"
      ]
     },
     {
@@ -781,70 +772,70 @@
        "      <td>bolesławiecki</td>\n",
        "      <td>1</td>\n",
        "      <td>2030</td>\n",
-       "      <td>64.907806</td>\n",
+       "      <td>64.433617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>bolesławiecki</td>\n",
        "      <td>2</td>\n",
        "      <td>2030</td>\n",
-       "      <td>67.136757</td>\n",
+       "      <td>66.831886</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>dzierżoniowski</td>\n",
        "      <td>1</td>\n",
        "      <td>2030</td>\n",
-       "      <td>65.444374</td>\n",
+       "      <td>66.198318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>dzierżoniowski</td>\n",
        "      <td>2</td>\n",
        "      <td>2030</td>\n",
-       "      <td>70.568550</td>\n",
+       "      <td>71.412590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>głogowski</td>\n",
        "      <td>1</td>\n",
        "      <td>2030</td>\n",
-       "      <td>71.218552</td>\n",
+       "      <td>71.403450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>głogowski</td>\n",
        "      <td>2</td>\n",
        "      <td>2030</td>\n",
-       "      <td>75.392914</td>\n",
+       "      <td>75.200096</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
        "      <td>górowski</td>\n",
        "      <td>1</td>\n",
        "      <td>2030</td>\n",
-       "      <td>64.284828</td>\n",
+       "      <td>64.791977</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
        "      <td>górowski</td>\n",
        "      <td>2</td>\n",
        "      <td>2030</td>\n",
-       "      <td>70.364845</td>\n",
+       "      <td>69.892075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>63</th>\n",
        "      <td>jaworski</td>\n",
        "      <td>1</td>\n",
        "      <td>2030</td>\n",
-       "      <td>63.839413</td>\n",
+       "      <td>63.286926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
        "      <td>jaworski</td>\n",
        "      <td>2</td>\n",
        "      <td>2030</td>\n",
-       "      <td>66.676231</td>\n",
+       "      <td>65.958946</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -852,16 +843,16 @@
       ],
       "text/plain": [
        "            county  round  year  turnout_percentage\n",
-       "11   bolesławiecki      1  2030           64.907806\n",
-       "12   bolesławiecki      2  2030           67.136757\n",
-       "24  dzierżoniowski      1  2030           65.444374\n",
-       "25  dzierżoniowski      2  2030           70.568550\n",
-       "37       głogowski      1  2030           71.218552\n",
-       "38       głogowski      2  2030           75.392914\n",
-       "50        górowski      1  2030           64.284828\n",
-       "51        górowski      2  2030           70.364845\n",
-       "63        jaworski      1  2030           63.839413\n",
-       "64        jaworski      2  2030           66.676231"
+       "11   bolesławiecki      1  2030           64.433617\n",
+       "12   bolesławiecki      2  2030           66.831886\n",
+       "24  dzierżoniowski      1  2030           66.198318\n",
+       "25  dzierżoniowski      2  2030           71.412590\n",
+       "37       głogowski      1  2030           71.403450\n",
+       "38       głogowski      2  2030           75.200096\n",
+       "50        górowski      1  2030           64.791977\n",
+       "51        górowski      2  2030           69.892075\n",
+       "63        jaworski      1  2030           63.286926\n",
+       "64        jaworski      2  2030           65.958946"
       ]
      },
      "execution_count": 8,
@@ -945,7 +936,7 @@
        "      <td>0201</td>\n",
        "      <td>bolesławiecki</td>\n",
        "      <td>1</td>\n",
-       "      <td>64.91</td>\n",
+       "      <td>64.43</td>\n",
        "      <td>2030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -953,7 +944,7 @@
        "      <td>0201</td>\n",
        "      <td>bolesławiecki</td>\n",
        "      <td>2</td>\n",
-       "      <td>67.14</td>\n",
+       "      <td>66.83</td>\n",
        "      <td>2030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -961,7 +952,7 @@
        "      <td>0202</td>\n",
        "      <td>dzierżoniowski</td>\n",
        "      <td>1</td>\n",
-       "      <td>65.44</td>\n",
+       "      <td>66.20</td>\n",
        "      <td>2030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -969,7 +960,7 @@
        "      <td>0202</td>\n",
        "      <td>dzierżoniowski</td>\n",
        "      <td>2</td>\n",
-       "      <td>70.57</td>\n",
+       "      <td>71.41</td>\n",
        "      <td>2030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -977,7 +968,7 @@
        "      <td>0203</td>\n",
        "      <td>głogowski</td>\n",
        "      <td>1</td>\n",
-       "      <td>71.22</td>\n",
+       "      <td>71.40</td>\n",
        "      <td>2030</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -986,11 +977,11 @@
       ],
       "text/plain": [
        "   terc_code          county  round  turnout_percentage  year\n",
-       "11      0201   bolesławiecki      1               64.91  2030\n",
-       "12      0201   bolesławiecki      2               67.14  2030\n",
-       "24      0202  dzierżoniowski      1               65.44  2030\n",
-       "25      0202  dzierżoniowski      2               70.57  2030\n",
-       "37      0203       głogowski      1               71.22  2030"
+       "11      0201   bolesławiecki      1               64.43  2030\n",
+       "12      0201   bolesławiecki      2               66.83  2030\n",
+       "24      0202  dzierżoniowski      1               66.20  2030\n",
+       "25      0202  dzierżoniowski      2               71.41  2030\n",
+       "37      0203       głogowski      1               71.40  2030"
       ]
      },
      "execution_count": 9,
@@ -1019,13 +1010,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_set_2030_df.to_parquet(\"../Data/Proccesed_data/final_predictions_to_visualize.parquet\")"
+    "model_set_2030_df.to_parquet(\"../data/proccesed_data/final_predictions_to_visualize.parquet\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
