Connect with model

--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c91eaf61",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,52 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
+    "from huggingface_hub import InferenceClient\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine, types, text\n",
     "import time\n",
     "\n",
-    "from src import database_methods as dbm \n"
+    "from src import database_methods as dbm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8af7e3ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model answer (What is the capital of France?):\n",
+      "ChatCompletionOutputMessage(role='assistant', content='The capital of France is Paris.\\n\\nNB: The real-time answer to this question may change as there are sometimes political or territorial disputes that might result in the recognition of a new capital city, but currently, as of my last update, Paris remains the capital city of France (as of November 2021).', reasoning=None, tool_call_id=None, tool_calls=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "client = InferenceClient(\n",
+    "    api_key=os.environ[\"HF_TOKEN\"],\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    \n",
+    "\n",
+    "    completion = client.chat.completions.create(\n",
+    "        model=\"HuggingFaceH4/zephyr-7b-beta:featherless-ai\",\n",
+    "        messages=[\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": \"What is the capital of France?\"\n",
+    "            }\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    print(f\"Model answer (What is the capital of France?):\\n{completion.choices[0].message}\")\n",
+    "except Exception as e:\n",
+    "    print(\"Model unsuccessfully loaded\")"
    ]
   },
   {
@@ -31,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "4c7b8ae5",
    "metadata": {},
    "outputs": [
@@ -41,18 +80,18 @@
      "text": [
       "DB Engine successfuly created\n",
       "     customer_id  monetary  frequency  recency  average_order_value  churn  \\\n",
-      "4505       17990   4889.64          3      236              1629.88      1   \n",
-      "4459       17935    951.79          2      138               475.90      1   \n",
-      "4157       17546   1165.72          1      198              1165.72      1   \n",
-      "2829       15836    407.28          1       50               407.28      0   \n",
-      "2018       14820   3133.40          5       21               626.68      0   \n",
+      "3161       16256   6726.58          1      266              6726.58      1   \n",
+      "2923       15957   2536.15          2       31              1268.08      0   \n",
+      "3238       16362   4325.82          5       32               865.16      0   \n",
+      "1614       14293   6579.12          4        3              1644.78      0   \n",
+      "4608       18139  58913.05          6       17              9818.84      0   \n",
       "\n",
       "                        email  \n",
-      "4505  customer_17990@mail.com  \n",
-      "4459  customer_17935@mail.com  \n",
-      "4157  customer_17546@mail.com  \n",
-      "2829  customer_15836@mail.com  \n",
-      "2018  customer_14820@mail.com  \n"
+      "3161  customer_16256@mail.com  \n",
+      "2923  customer_15957@mail.com  \n",
+      "3238  customer_16362@mail.com  \n",
+      "1614  customer_14293@mail.com  \n",
+      "4608  customer_18139@mail.com  \n"
      ]
     }
    ],
@@ -94,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "5c354297",
    "metadata": {},
    "outputs": [
@@ -125,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "6e57d214",
    "metadata": {},
    "outputs": [
@@ -188,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
