add AI prompt dict

--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "c91eaf61",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8af7e3ac",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "Model answer (What is the capital of France?):\n",
-      "ChatCompletionOutputMessage(role='assistant', content='The capital of France is Paris.\\n\\nNB: The real-time answer to this question may change as there are sometimes political or territorial disputes that might result in the recognition of a new capital city, but currently, as of my last update, Paris remains the capital city of France (as of November 2021).', reasoning=None, tool_call_id=None, tool_calls=None)\n"
+      "The capital of France is Paris. Other major cities in France include Marseille, Lyon, Lille, Bordeaux, Nice, and Toulouse.\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "        ],\n",
     "    )\n",
     "\n",
-    "    print(f\"Model answer (What is the capital of France?):\\n{completion.choices[0].message}\")\n",
+    "    print(f\"Model answer (What is the capital of France?):\\n{completion.choices[0].message.content}\")\n",
     "except Exception as e:\n",
     "    print(\"Model unsuccessfully loaded\")"
    ]
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "4c7b8ae5",
    "metadata": {},
    "outputs": [
@@ -79,18 +79,18 @@
      "text": [
       "DB Engine successfuly created\n",
       "     customer_id  monetary  frequency  recency  average_order_value  churn  \\\n",
-      "3161       16256   6726.58          1      266              6726.58      1   \n",
-      "2923       15957   2536.15          2       31              1268.08      0   \n",
-      "3238       16362   4325.82          5       32               865.16      0   \n",
-      "1614       14293   6579.12          4        3              1644.78      0   \n",
-      "4608       18139  58913.05          6       17              9818.84      0   \n",
+      "1407       14034   5003.47          3       22              1667.82      0   \n",
+      "1664       14362   1118.52          1       22              1118.52      0   \n",
+      "2738       15723   1099.92          1      364              1099.92      1   \n",
+      "3971       17312   4500.12          4      138              1125.03      1   \n",
+      "990        13500   7437.54          3       23              2479.18      0   \n",
       "\n",
       "                        email  \n",
-      "3161  customer_16256@mail.com  \n",
-      "2923  customer_15957@mail.com  \n",
-      "3238  customer_16362@mail.com  \n",
-      "1614  customer_14293@mail.com  \n",
-      "4608  customer_18139@mail.com  \n"
+      "1407  customer_14034@mail.com  \n",
+      "1664  customer_14362@mail.com  \n",
+      "2738  customer_15723@mail.com  \n",
+      "3971  customer_17312@mail.com  \n",
+      "990   customer_13500@mail.com  \n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "5c354297",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "6e57d214",
    "metadata": {},
    "outputs": [
@@ -221,6 +221,47 @@
     "\n",
     "df_rfm[\"segmentation\"] = np.select(conditions, choice, default=\"standard_promo\")\n",
     "print(df_rfm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00324350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vip_loyalty_prompt = r\"\"\"\n",
+    "    You are a Customer Success Manager for a premium brand. \n",
+    "    Write a short, exclusive appreciation email to our VIP customer. \n",
+    "    Thank them for their loyalty. \n",
+    "    Offer a special 20% discount on their next purchase with code: VIP20. \n",
+    "    Tone: Professional, grateful, and exclusive. \n",
+    "    Keep it under 100 words. Do not use hashtags.\n",
+    "\"\"\"\n",
+    "churn_recovery_prompt = r\"\"\"\n",
+    "    You are a warm and friendly Customer Support Specialist. \n",
+    "    Write a 'We Miss You' email to a customer who hasn't purchased in a while. \n",
+    "    Convince them to come back. \n",
+    "    Offer a 15% welcome back discount with code: MISSYOU15. \n",
+    "    Tone: Empathetic, warm, casual. \n",
+    "    Keep it under 80 words.\"\n",
+    "\"\"\"\n",
+    "\n",
+    "standard_promo_prompt = r\"\"\"\n",
+    "    \"You are an energetic Marketing Copywriter. \n",
+    "    Write a catchy promotional email to an active customer. \n",
+    "    Encourage them to check out our new arrivals. \n",
+    "    Offer a 10% discount on the next order with code: HELLO10. \n",
+    "    Tone: Exciting, direct, sales-oriented. \n",
+    "    Keep it under 80 words.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = {\n",
+    "    \"vip_loyalty\": vip_loyalty_prompt, \n",
+    "    \"churn_recovery\": churn_recovery_prompt, \n",
+    "    \"standard_promo\": standard_promo_prompt\n",
+    "}\n",
+    "\n"
    ]
   }
  ],
