add AI prompt dict

--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -248,7 +248,7 @@
     "\"\"\"\n",
     "\n",
     "standard_promo_prompt = r\"\"\"\n",
-    "    \"You are an energetic Marketing Copywriter. \n",
+    "    You are an energetic Marketing Copywriter. \n",
     "    Write a catchy promotional email to an active customer. \n",
     "    Encourage them to check out our new arrivals. \n",
     "    Offer a 10% discount on the next order with code: HELLO10. \n",
