test generate_email method

--- a/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
+++ b/E-commerce_Marketing_Automation_Agent/notebooks/02_RFM_segmentation_and_GenAI_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "c91eaf61",
    "metadata": {},
    "outputs": [],
@@ -17,12 +17,13 @@
     "from sqlalchemy import create_engine, types, text\n",
     "import time\n",
     "\n",
-    "from src import database_methods as dbm\n"
+    "from src import database_methods as dbm\n",
+    "from src import ai_agent_methods as aiam\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "8af7e3ac",
    "metadata": {},
    "outputs": [
@@ -31,7 +32,7 @@
      "output_type": "stream",
      "text": [
       "Model answer (What is the capital of France?):\n",
-      "The capital of France is Paris. Other major cities in France include Marseille, Lyon, Lille, Bordeaux, Nice, and Toulouse.\n"
+      "The capital of France is Paris (French: Paris).\n"
      ]
     }
    ],
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "4c7b8ae5",
    "metadata": {},
    "outputs": [
@@ -79,18 +80,18 @@
      "text": [
       "DB Engine successfuly created\n",
       "     customer_id  monetary  frequency  recency  average_order_value  churn  \\\n",
-      "1407       14034   5003.47          3       22              1667.82      0   \n",
-      "1664       14362   1118.52          1       22              1118.52      0   \n",
-      "2738       15723   1099.92          1      364              1099.92      1   \n",
-      "3971       17312   4500.12          4      138              1125.03      1   \n",
-      "990        13500   7437.54          3       23              2479.18      0   \n",
+      "3900       17214   3924.50          6       60               654.08      0   \n",
+      "4565       18080   7841.16          2       18              3920.58      0   \n",
+      "521        12896     77.61          1      158                77.61      1   \n",
+      "3627       16851   2779.46          3        4               926.49      0   \n",
+      "2786       15785  18254.07          5       32              3650.81      0   \n",
       "\n",
       "                        email  \n",
-      "1407  customer_14034@mail.com  \n",
-      "1664  customer_14362@mail.com  \n",
-      "2738  customer_15723@mail.com  \n",
-      "3971  customer_17312@mail.com  \n",
-      "990   customer_13500@mail.com  \n"
+      "3900  customer_17214@mail.com  \n",
+      "4565  customer_18080@mail.com  \n",
+      "521   customer_12896@mail.com  \n",
+      "3627  customer_16851@mail.com  \n",
+      "2786  customer_15785@mail.com  \n"
      ]
     }
    ],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5c354297",
    "metadata": {},
    "outputs": [
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "6e57d214",
    "metadata": {},
    "outputs": [
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "00324350",
    "metadata": {},
    "outputs": [],
@@ -262,6 +263,87 @@
     "    \"standard_promo\": standard_promo_prompt\n",
     "}\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f36a507",
+   "metadata": {},
+   "source": [
+    "# Methodology: AI Content Generation & API Integration\n",
+    "This module implements an LLM-based (Large Language Model) agent to automate personalized marketing communication. Below are the key technical decisions and the rationale behind the chosen data flow architecture.\n",
+    "\n",
+    "1. Simulation Mode (\"Dry Run\") & Data Safety\n",
+    "For safety reasons and development purposes, no actual emails are transmitted to customer addresses.\n",
+    "\n",
+    "Process: Generated content is stored directly within the pandas.DataFrame as a new feature (e.g., email_draft).\n",
+    "\n",
+    "Persistence: Upon completion, the enriched dataset is exported to a .csv / .parquet file. This allows for a Human-in-the-Loop (HITL) approach, where drafts undergo Quality Assurance (QA) before any potential production deployment.\n",
+    "\n",
+    "2. Sequential Execution Strategy (Single-Threaded)\n",
+    "The system utilizes the pandas .apply() method for row-by-row processing. While vectorization is typically preferred in Data Science for performance, sequential processing is the optimal architectural choice in this specific context.\n",
+    "\n",
+    "We deliberately avoided Parallel Processing (e.g., joblib, multiprocessing) due to the constraints of the Hugging Face Serverless Inference API (Free Tier):\n",
+    "\n",
+    "API Rate Limiting: The free tier imposes strict limits on the number of requests per second (QPS). Parallel execution would trigger simultaneous requests, resulting in immediate HTTP 429 (Too Many Requests) errors and token suspension.\n",
+    "\n",
+    "I/O Bound Process: The bottleneck is not local CPU computation power, but Network Latency (waiting for the server to generate text).\n",
+    "\n",
+    "Traffic Control: Using a sequential loop within .apply() allows for precise pacing via time.sleep(). This ensures the script respects the API's concurrency limits and maintains stability throughout the ETL process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da4a4df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear valued customer,\n",
+      "\n",
+      "We're thrilled to announce the arrival of our latest collection at Wojciech Kiełbowicz & Co! From chic blouses to timeless coats, our new arrivals are here to elevate your wardrobe game. Don't miss out on these stunning additions that will take your style to the next level. As a loyal patron, we're delighted to offer you an exclusive 10% discount on your next order with code HELLO10. Act fast and treat yourself or a loved one to the freshest pieces. Browse now and upgrade your wardrobe with the latest in fashion. Shop with us and feel the difference. Your satisfaction is our priority, always.\n",
+      "\n",
+      "[Your Customer ID: 14737]\n",
+      "\n",
+      "Experience our exceptional service and exceptional quality. Upgrade your wardrobe with our newest arrivals at Wojciech Kiełbowicz & Co. Visit us in-store or online and use code HELLO10 for a 10% discount on your next purchase. Our collection is the perfect blend of modern and classic, guaranteed to delight. Shop now at wojciechkielbowicz.com or visit us in-store. Thank you for your continued support. \n",
+      "\n",
+      "Best Regards,\n",
+      "The Wojciech Kiełbowicz & Co. Team.\n",
+      "--------------------------------------------------\n",
+      "Dear Valued Customer,\n",
+      "\n",
+      "At Wojciech Kiełbowicz & Co, we are immensely grateful for your unwavering loyalty and continued patronage. Your unwavering support has been a true testament to the exceptional quality and craftsmanship that defines our brand. As a VIP client, we understand the importance of your preferences and trust in our products, and we are honored to have earned your confidence. In appreciation of your commitment to our premium brand, we would like to extend a special offer to you. As a token of gratitude, we are thrilled to gift you with a 20% discount on your next purchase. Simply enter the code VIP20 at checkout to avail this exclusive offer.\n",
+      "\n",
+      "Your loyalty has not gone unnoticed, and we would like to express our sincere thanks for choosing us as your preferred fashion destination. Our commitment to delivering exceptional products and impeccable service is unwavering, and we are proud to have you as part of our family.\n",
+      "\n",
+      "We are delighted to extend this offer to you, as a gesture of our gratitude, and we hope this gesture further strengthens our relationship. As a VIP customer, we assure you of our steadfast commitment to providing the finest garments that embody timeless elegance and sophistication. We look forward to continuing our partnership and thank you for choosing us for all your future fashion needs.\n",
+      "\n",
+      "With sincere appreciation,\n",
+      "\n",
+      "The Wojciech Kiełbowicz & Co Team.\n",
+      "--------------------------------------------------\n",
+      "Dear Valued Customer,\n",
+      "\n",
+      "At Wojciech Kiełbowicz & Co, we would like to extend our heartfelt thanks for your unwavering loyalty and continued support. Your patronage has not gone unnoticed, and we are honored to have you as one of our most cherished clients. As a testament to our appreciation, we are pleased to offer you a special discount of 20% off your next purchase with the code VIP20. This exclusive gesture is our way of expressing our gratitude for your commitment to our brand. Your loyalty has been instrumental in our growth and success, and we are privileged to have you as part of our community. We take pride in delivering exceptional products and services, and we are committed to upholding your satisfaction with every interaction. Please use the code VIP20 during checkout to redeem this limited-time offer. Thank you for your patronage and we look forward to continuing our partnership.\n",
+      "\n",
+      "Sincerely,\n",
+      "\n",
+      "The Wojciech Kiełbowicz & Co Team\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_test = df_rfm.sample(3)\n",
+    "df_test[\"email_draft\"] = df_test.apply(aiam.generate_email, axis=1, args=(client, prompt))\n",
+    "for i in range(3):\n",
+    "    print(df_test[\"email_draft\"].iloc[i])\n",
+    "    print(50 * \"-\")\n",
+    "del df_test"
    ]
   }
  ],
